--- a/_css/style.css
+++ b/_css/style.css
@@ -1,16 +1,51 @@
 @charset "UTF-8"
 
-
 body{
 
-    background-color: whith;
-    color: rgba(0,0, 0,1);
+    background-color:#929292;
+    color:rgba(0, 0, 0, 1);
+}
+div#interface {
+    width: 800px;
+    background-color: #ffffff;
+    margin: -20px auto 0px auto;
+    box-shadow:10px 10px 10px 10px rgba(0, 0, 0, .5) ;
+    padding: 10px 10px 10px 10px;
+    
+
 }
 p{
     text-align: justify;
     text-indent: 50px;
 }
+header#cabecalho {
+    border-bottom: 1px #606060 solid;
+    height: 150px;
+    background : url(../projeto-glass-html5/_imagens/glass-logo-peq.jpg) no-repeat 0px 85px;
+    padding: 0px;
+}
+header#cabecalho h1{
+    font-family: Arial, sans-serif;
+    font-size: 30pt;
+    color: #606060;
+    text-shadow: 1px 1px 1px rgba(0, 0, 0, .6);
+    padding: 0px;
+    margin-bottom: 0px;
+}
+header#cabecalho h2 {
+    font-family: Arial, sans-serif;
+    font-size: 15pt;
+    color: #888888;
+    margin-top: 0px;
+}
+
 /* formatação de imagem com legenda*/
+
+header#cabecalho img#icone{
+    position: absolute;
+    left: 65%;
+    top: 50px;
+}
 
 figure.foto-legenda{
     position: relative;
@@ -22,12 +57,55 @@ figure.foto-legenda img{
     heigth: 100%;
 }
 figure.foto-legenda figcaption{
+    opacity: 0;
     position: absolute;
     top: 0px;
     background-color: rgba(0,0, 0,0.4);
     color: white;
     width: 100%
     heigth: 100px;
-    padding: 10px;
-    box-sizing: borde-box;
+    padding: 29px;
+    box-sizing: border-box;
+    transition: opacity 1s;
 }
+figure.foto-legenda:hover figcaption{
+    opacity: 1;
+}
+/*formatação do menu*/
+nave#menu{ 
+    display: block;
+}
+
+nav#menu ul{
+    list-style: none;
+    text-transform: uppercase ;
+    position:absolute;
+    top: -20px;
+    left: 800px;
+}
+nav#menu li{
+    display: inline-block;
+    background-color: #ddd;
+    padding: 5px;
+    margin: 1px;
+    transition: 1s;
+}
+nav#menu li:hover{
+    background-color: #606060;
+
+}
+
+nav#menu h1{
+    display: none;
+
+}
+nav#menu a{
+    color: #000000;
+    text-decoration: none;
+
+}
+nav#menu a:hover{
+    color: rgb(233, 255, 255);
+}
+
+
