--- a/_css/style.css
+++ b/_css/style.css
@@ -4,8 +4,8 @@
 </style>
 
 body{
-
-    background-color:#6b4444;
+    font-family: 'Edu TAS Beginner', cursive;
+    background-color:#dddddd;
     color:rgba(0, 0, 0, 1);
 }
 div#interface {
@@ -20,6 +20,13 @@ div#interface {
 p{
     text-align: justify;
     text-indent: 50px;
+}
+a{
+   color: #606060; 
+   text-decoration: none;
+}
+a:hover{
+    text-decoration: underline;
 }
 header#cabecalho {
     border-bottom: 1px #606060 solid;
@@ -71,14 +78,16 @@ figure.foto-legenda figcaption{
     box-sizing: border-box;
     transition: opacity 1s;
 }
+
 figure.foto-legenda:hover figcaption{
     opacity: 1;
 }
+
 /*formatação do menu*/
+
 nave#menu{ 
     display: block;
 }
-
 nav#menu ul{
     list-style: none;
     text-transform: uppercase ;
@@ -95,17 +104,13 @@ nav#menu li{
 }
 nav#menu li:hover{
     background-color: #606060;
-
 }
-
 nav#menu h1{
     display: none;
-
 }
 nav#menu a{
     color: #000000;
     text-decoration: none;
-
 }
 nav#menu a:hover{
     color: rgb(233, 255, 255);
@@ -116,6 +121,7 @@ section#corpo {
     float: left;
     border-right: 1px solid #606060;
     padding-right: 15px;
+
 }
 table#tabelainfo {
     border: 1px solid #606060;
@@ -127,11 +133,50 @@ table#tabelainfo td{
     border: 1px solid #606060;
     padding: 10px;
 }
-
+table#tabelainfo td.ce{
+    text-align: right;
+    color: #ffffff;
+    background-color: #606060;
+    vertical-align: top;
+}
+table#tabelainfo td.cd{
+    text-align: left;
+    background-color:#cecece;
+}
+table#tabelainfo caption{
+    color: #606060;
+    font-size: 13pt;
+    font-weight: bolder;
+}
+table#tabelainfo caption span{
+   display: block;
+   float: right;
+   color: #000000;
+    font-size: 8pt;
+    margin-top: 10px;
+}
 aside#lateral {
     display: block;
-    width: 370px;
+    width: 340px;
     float: right;
+    background-color:#dddddd ;
+    box-shadow: 2px 2px 2px rgba(0, 0, 0, .5);
+    padding: 10px;
+    margin: 10px;
+
+}
+aside#lateral h1{
+    font-family: 'Edu TAS Beginner', cursive;
+    font-size: 17pt;
+    color: #606060;
+    margin-top: 10px;
+}
+aside#lateral h2{
+    background-color: #606060;
+    font-size: 13pt;
+    color: #ffffff;
+    padding: 5px;
+
 }
 footer#rodape {
     clear: both;
@@ -139,4 +184,31 @@ footer#rodape {
 }
 footer#rodape p{
     text-align: center;
+}
+article#noticia-principal  h2{ 
+    font-size: 13pt;
+    color: #606060;
+    background-color: #dddddd;
+    padding: 5px 0px 5px 10px;
+    margin: 10px 0px 10px 0px;
+}
+header#cabeçalho-artigo h1{
+    font-family: 'Edu TAS Beginner', cursive;
+    font-size: 15pt;
+    color: #606060;margin-bottom: 0px;
+}
+header#cabeçalho-artigo h2{
+    font-size: 12pt;
+    color: #cecece;
+    background-color: #ffffff;
+    margin: 0px;
+}
+header#cabeçalho-artigo h3{
+    font-size: 12px;
+    color: #cecece;
+    background-color: #ffffff ;
+}
+header#cabeçalho-artigo h3.direita{
+    text-align: right;
+    color:#606060 ;
 }
