--- a/projeto-glass-html5/_css/specs.css
+++ b/projeto-glass-html5/_css/specs.css
@@ -1,18 +1,18 @@
-@charset "UTFR-8"
+@charset "UTF-8";
 
 section#conteudo{
-    width: 500px;
+    width: 1000px;
     margin: auto;
+   
 }
+
 iframe#frame-spec{
-    width: 300px;
+    width: 425px;
     height: 280px;
     border: none;
     overflow: hidden;
 }
+
 iframe#frame-spec::-webkit-scrollbar{
     display: none;
 }
- img#ocul{
-    width: 450px;
- }
